              std::is_unsigned_v<T> that allow for 128-bit integers also.
    PYTHON:
        - Updated the included pybind11 library from 2.10.0 to 2.10.4.
        - Improved the speed of iteration (specifically, throwing/catching
          StopIteration exceptions).
    USER INTERFACE:
        - Now uses multithreading for those long computations that support it.

Version 7.3  [ 18 March, 2023 ]

    ENGINE:
        Class BitManipulator<T>:
            - Routines bits(), firstBit() and lastBit() are now constexpr.
        Class Component<4>:
            - Fix a bug where single-vertex boundary components were included
              in Triangulation<4>::boundaryComponents(), but were omitted from
              Component<4>::boundaryComponents().
        Class GroupExpression:
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
            - The string constructor now takes the number of generators as an
              optional argument, and throws an exception if some generator in
              the string is out of range.
        Class GroupPresentation:
            - Routine enumerateCovers() now accepts indices ≤ 11, not ≤ 7.
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
            - The string constructor now throws an exception if some relation
              contains a generator that is out of range.
            - Renamed simplifyWord() to simplifyAndConjugate(), to make it
              clear to the user that conjugation might take place.  The old
              name simplifyWord() has been removed completely.
            - Fixed a bug in the text-based recogniseGroup(), which could have
              reported the wrong monodromy for a group that was (correctly)